--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Play Box</string>
+    <string name="app_name">Fahad\'s PlayBox</string>
     <string name="title_name">PlayBox</string>
     <string name="creator">by FAHAD</string>
     <string name="buttonStateOn">%1$s On</string>
