--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,15 +21,18 @@
     <string name="no">No</string>
 
     <string name="select_game">Select Game</string>
+    <string name="select_tool">Select Tool</string>
     <string name="change_settings">Change Settings</string>
     <string name="select_gamemode">Select Gamemode</string>
 
     <string name="games">Games</string>
+    <string name="tools">Tools</string>
     <string name="settings">Settings</string>
     <string name="TicTacToe">Tic Tac Toe</string>
     <string name="wordle">Wordle</string>
     <string name="color_puzzle">Color Puzzle</string>
     <string name="dot_and_boxes">Dot And Boxes</string>
+    <string name="cgpa_calculator">CGPA Calculator</string>
 
     <string name="pvp">Player Vs Player</string>
     <string name="pvAI">Player   Vs   AI</string>
@@ -72,6 +75,8 @@
     <string name="select_mode">Select Mode</string>
     <string name="select_difficulty">Select Difficulty</string>
     <string name="reset_game">Reset Game?</string>
+    <string name="casual">Casual</string>
+    <string name="tactical">Tactical</string>
     <string name="size5">5 x 5</string>
     <string name="size6">6 x 6</string>
     <string name="size7">7 x 7</string>
