--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,6 +83,7 @@
     <string name="size8">8 x 8</string>
     <string name="size9">9 x 9</string>
     <string name="size10">10 x 10</string>
+    <string name="empty">00</string>
 
     <!-- On-screen keyboard letters -->
     <string name="letter_A" translatable="false">A</string>
