--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,6 +86,11 @@
     <string name="empty">00</string>
     <string name="draw">Draw</string>
 
+    <string name="subject_name">Subject Name</string>
+    <string name="one_to_hundred">1 – 100</string>
+    <string name="zero_to_hundred">0 – 100</string>
+    <string name="one_to_nine">1 – 9</string>
+
     <!-- On-screen keyboard letters -->
     <string name="letter_A" translatable="false">A</string>
     <string name="letter_B" translatable="false">B</string>
