--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,6 +91,8 @@
     <string name="zero_to_hundred">0 – 100</string>
     <string name="one_to_nine">1 – 9</string>
     <string name="gpa">GPA</string>
+    <string name="sgpa">SGPA</string>
+    <string name="cgpa">CGPA</string>
     <string name="total_marks">Total\nMarks</string>
     <string name="marks_gained">Marks\nGained</string>
     <string name="credit_hours">Credit\nHours</string>
